deploy/kubernetes/website-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - https.vikramtiwari.com
    secretName: website-tls
  rules:
  - host: https.vikramtiwari.com
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
